projects/nex.rpi/src/apps/nr-sso/live/production/authelia-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: authelia-sso
    app.kubernetes.io/name: authelia
    app.kubernetes.io/part-of: sso
    app.kubernetes.io/version: 4.38.11
  name: authelia
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: kube-system
      sectionName: nr.chezmoi.sh-websecure
  hostnames:
    - sso.nr.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: authelia
          port: 80
