projects/nex.rpi/src/apps/nr-sso/live/production/yaldap-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ldaps-gateway
spec:
  gatewayClassName: traefik-gateway
  listeners:
    - name: ldaps
      hostname: ldaps.nr.chezmoi.sh
      protocol: TLS
      port: 636
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ldaps.nr.chezmoi.sh-certificate
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: ldaps-tlsroute
spec:
  parentRefs:
    - kind: Gateway
      name: ldaps-gateway
      sectionName: ldaps
  hostnames:
    - ldaps.nr.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: yaldap
          port: 389
